# accuparsec

./: .ghcid  .gitignore  README.md  accuparsec.cabal  bench.sh  cabal.project  run-benchmark.sh  shell.nix
accuparsec/: accuparsec.cabal
accuparsec/Data/: SList.hs
accuparsec/Data/Accuparsec/: Text.hs
accuparsec/src/Data/: DList.hs  SList.hs
accuparsec/src/Data/Accuparsec/: Text.hs
bench/: Main.hs
bench-results/: bench_2023-04-13_21:55:30.json  bench_2023-04-15_01:33:20.json  bench_2023-04-16_01:13:22.json  bench_2023-04-16_04:21:07.json  bench_2023-04-16_04:25:53.json  bench_2023-04-16_04:27:26.json  bench_2023-04-16_19:41:36.json
err-eval/: Main.hs
gcl/: Experiment.hs  README.md  gcl.cabal
gcl-parser/: README.md  gcl-parser.cabal
gcl-parser/src/GCL/: Parser.hs  Syntax.hs
gcl/GCL/Parser/: Accuparsec.hs  Attoparsec.hs  Rednaz.hs
gcl/Language/GCL/: Syntax.hs
gcl/Language/GCL/Parser/: Accuparsec.hs  Attoparsec.hs
gcl/bench/: Main.hs  plot.py
gcl/bench/progs/: prog10.gcl  prog100.gcl  prog20.gcl  prog30.gcl  prog40.gcl  prog50.gcl  prog60.gcl  prog70.gcl  prog80.gcl  prog90.gcl
gcl/bench/results/: gcl_2023-04-10_19:03:23.json  gcl_2023-04-13_01:25:09.json
gcl/error-eval/: Main.hs
gcl/gen-progs/: Main.hs
gcl/src/GCL/: Syntax.hs
gcl/src/GCL/Parser/: Accuparsec.hs  Attoparsec.hs
gcl/test/: Main.hs
gen-progs/: GCL.hs  JSON.hs  Main.hs
json/JSON/: Syntax.hs
json/JSON/Parser/: Accuparsec.hs  Attoparsec.hs
plot/: plot.py  plot_err.py
progs/: err-eval-longest.gcl  err-eval-medium.gcl  err-eval.gcl  prog20.gcl  prog80.gcl
progs/gcl/: 040-err-253113.gcl  070-err-1360353.gcl  10.gcl  100.gcl  20-err-31953.gcl  20.gcl  30-err-106833.gcl  30.gcl  40.gcl  50-err-494793.gcl  50.gcl  60-err-855873.gcl  60.gcl  70-1360353.gcl  80-2032233.gcl  80-err-2032233.gcl  90-2895513.gcl  90-err-2895513.gcl  90.gcl
progs/json/: 10.json  100-260341.json  100-err-260341.json  150-582566.json  150-err-582566.json  20.json  200-1036041.json  200-err-1036041.json  250-1620766.json  250-err-1620766.json  30-94688.json  30-err-94688.json  300-2336741.json  300-err-2336741.json  40.json  400-4162441.json  400-err-4162441.json  50-err-636631.json  50.json  60.json  70-2608046.json  70-err-2608046.json
test/: Main.hs
