cabal-version: 3.6

name: accuparsec
version: 0.0.0.0
build-type: Simple

common ghc-flags
  default-language: GHC2021

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilies
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

library
  import: ghc-flags

  hs-source-dirs: src
  exposed-modules:
    Data.Accuparsec.Text
    Data.SList

  build-depends:
    base >=4.15 && <5
    , text ^>= 2
