cabal-version: 3.6

name: gcl-parser
version: 0.0.0.0
build-type: Simple

common ghc-flags
  default-language: GHC2021

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilies
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

library
  import: ghc-flags

  hs-source-dirs: src
  main-is: Main.hs

  exposed-modules:
    GCL.Parser
    GCL.Syntax

  build-depends:
    base >=4.15 && <5
    , attoparsec ^>= 0.14.4
    , parser-combinators ^>= 1.3
    , text ^>= 2
