cabal-version: 3.6

name: gcl
version: 0.0.0.0
build-type: Simple

common ghc-flags
  default-language: GHC2021

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilies
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

library
  import: ghc-flags

  hs-source-dirs: src
  exposed-modules:
    GCL.Parser.Accuparsec
    GCL.Parser.Attoparsec
    GCL.Syntax

  build-depends:
    base >=4.15 && <5
    , accuparsec
    , attoparsec ^>= 0.14.4
    , deepseq ^>= 1.4.8
    , parser-combinators ^>= 1.3
    , text ^>= 2

executable gen-progs
  import: ghc-flags

  hs-source-dirs: gen-progs
  main-is: Main.hs

  build-depends:
    base >=4.15 && <5
    , text ^>= 2

benchmark bench
  import: ghc-flags

  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs

  build-depends:
    base >=4.15 && <5
    , criterion ^>= 1.6
    , deepseq ^>= 1.4.8
    , gcl
    , text ^>= 2
